# AegisTriage

./: .gitignore  supabase_details.txt
backend/: .env  README.md  pyproject.toml
backend/app/: main.py
backend/app/api/endpoints/: ml.py  patients.py
backend/app/core/: config.py
backend/app/db/: supabase.py
backend/app/models/: schemas.py
backend/app/services/: ml_service.py  patient_service.py
frontend/: package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  Layout.jsx
frontend/src/pages/: DoctorDashboard.jsx  NurseDashboard.jsx
frontend/src/pages/forms/: DiabetesForm.jsx  HeartDiseaseForm.jsx  KidneyDiseaseForm.jsx  LiverDiseaseForm.jsx  PatientRegistration.jsx  VitalsForm.jsx
heart_risk/: feature_names.pkl  heart_disease_pipeline.pkl  heart_disease_rf_model.pkl  heart_disease_scaler.pkl  hyperparameter.py  main.py  test_models.py
